src/snapshots/tptp__cnf__tests__cnf_formula-3.snap
---
source: src/cnf.rs
expression: parsed
---
Parenthesised(
    Disjunction(
        [
            Atomic(
                Plain(
                    PlainAtomicFormula(
                        Constant(
                            Constant(
                                Functor(
                                    Lower(
                                        LowerWord(
                                            "p",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ],
    ),
)
