src/snapshots/tptp__cnf__tests__disjunction-5.snap
---
source: src/cnf.rs
expression: parsed
---
Disjunction(
    [
        Atomic(
            Plain(
                PlainAtomicFormula(
                    Constant(
                        Constant(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "p",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
        NegatedAtomic(
            Plain(
                PlainAtomicFormula(
                    Constant(
                        Constant(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "q",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
        Atomic(
            Plain(
                PlainAtomicFormula(
                    Constant(
                        Constant(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "r",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ],
)
