src/snapshots/tptp__cnf__tests__disjunction.snap
---
source: src/cnf.rs
expression: parsed
---
Disjunction(
    [
        Atomic(
            Plain(
                PlainAtomicFormula(
                    Constant(
                        Constant(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "p",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ],
)
