src/snapshots/tptp__cnf__tests__literal-3.snap
---
source: src/cnf.rs
expression: parsed
---
NegatedAtomic(
    Plain(
        PlainAtomicFormula(
            Constant(
                Constant(
                    Functor(
                        Lower(
                            LowerWord(
                                "p",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
