src/snapshots/tptp__cnf__tests__literal.snap
---
source: src/cnf.rs
expression: parsed
---
Atomic(
    Plain(
        PlainAtomicFormula(
            Constant(
                Constant(
                    Functor(
                        Lower(
                            LowerWord(
                                "p",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
